fixed z-index issue css bug

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -216,7 +216,7 @@ font-size: 80%;;
   top:10px;
   display:flex;
   gap:1rem;
-  z-index:1;
+  /* z-index:1; */
 
 
 }
